--- a/angular.json
+++ b/angular.json
@@ -53,9 +53,16 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": false,
+              "outputHashing": "all",
+              "optimization": true,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
