✨ Update Angular dependencies to version 19 and adjust optimization settings in development configuration

--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,7 @@
             },
             "development": {
               "outputHashing": "all",
-              "optimization": true,
+              "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
               "fileReplacements": [
